--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     user-select: none;
     scroll-behavior: smooth;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 :root {
@@ -388,6 +389,7 @@
     background-color: #fff;
     padding: 10px 0px;
     font-size: 16px;
+    padding-left: 10px;
     line-height: 1.7;
 }
 .timeline_content h3{
@@ -401,7 +403,7 @@
 }
 .time_line::before{
     counter-increment: count;
-    content: counter(count);
+    content: "0" counter(count);
     position: absolute;
     left: -2em;
     background: var(--primary-color);
