--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@
     position: absolute;
     top: 25%;
     right: 70%;
-    padding: 20px;
+    padding: 20px 6px;
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -583,7 +583,6 @@ footer {
     .section4 {
         flex-direction: column;
     }
-
     #feature1 {
         width: 80%;
     }
@@ -591,7 +590,6 @@ footer {
         width: 50%;
         justify-content: center;
     }
-
     #reviewheading {
         justify-content: space-around;
     }
