--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 .container {
     max-width: 1350px;
     margin: auto;
+    /* padding: 3% 135px !important; */
 }
 .iconcolorprimary {
     color: var(--primary-color);
@@ -657,8 +658,7 @@ footer {
     #about1 {
         justify-content: center;
         width: 100%;
-        height: 600px;
-        overflow: hidden;
+        height: 500px;
     }
     #aboutdetail3 {
         max-width: 430px;
@@ -668,6 +668,9 @@ footer {
     }
     #about1 img{
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: 100% 95%;
         padding-right: 15px;
     }
     #about2{
@@ -698,14 +701,15 @@ footer {
     }
     #feature2 {
         width: 100%;
-        height: 600px;
-        overflow: hidden;
+        height: 500px;
         justify-content: center;
         padding-left: 15px;
         margin: auto;
     }
     #feature2 img{
         width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
     .reviewsubheadingarrow {
         width: 12%;
@@ -821,7 +825,7 @@ footer {
         width: 100%;
         display: flex;
         align-items: end;
-        height: 500px;
+        height: 400px;
     }
     #bannertext h1,
     #bannertext p {
@@ -892,7 +896,9 @@ footer {
     #about1 {
         justify-content: center;
         width: 100%;
+        height: 300px;
         line-height: normal;
+        padding: 0px 16px;
     }
     #about2 {
         width: 100%;
@@ -902,6 +908,9 @@ footer {
     }
     #about1 img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: 100% 90%;
     }
     #aboutdetail1 h2 {
         font-size: 1.5em;
@@ -924,9 +933,13 @@ footer {
     #feature2 {
         width: 100%;
         justify-content: center;
+        padding: 0px 16px;
+        height: 300px;
     }
     #feature2 img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
     #reviewheading {
         padding: 0px 0px;
@@ -941,7 +954,7 @@ footer {
     #reviewcontent {
         flex-direction: column;
         align-items: center;
-        padding: 5% 0px 0px 0px;
+        padding: 5% 16px 0px 16px;
         gap: 20px;
     }
     .numberdetail h6 {
@@ -986,9 +999,13 @@ footer {
     }
     .subscribebtn a {
         position: relative;
-        right: 27px;
+        right: 0px;
+        width: 30%;
         font-size: .8em;
         padding: 20px;
+    }
+    .subscribebtn input {
+        margin-left: 10px;
     }
     #footer1 h2 {
         font-size: 1.5em;
@@ -998,7 +1015,6 @@ footer {
     }
     #footer1 {
         padding: 5% 16px 15% 16px;
-        text-align: initial;
     }
     #aboutdetail1{
         padding: 10px 0px;
